<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.presentation.ForgetPassword"
    android:background="#f9f9f9">

    <RelativeLayout
        android:id="@+id/centerLine3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerLine3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="42sp"
            android:text="@string/forgot_your_password"
            android:textStyle="bold"
            android:textColor="#0D47A1">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:text="@string/don_t_worry_we_fix_that"
            android:textStyle="bold"
            android:textColor="#0D47A1">

        </TextView>

    </LinearLayout>

    <EditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerLine3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_your_email"
        android:minHeight="48dp"
        android:autofillHints="">
    </EditText>

    <Button
        android:id="@+id/enterEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/centerLine3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#3D4EF4"
        android:text="@string/click_here_to_recover"
        android:textSize="16sp"
        android:textColor="@color/white">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_to_log_in_page"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:layout_below="@+id/enterEmailBtn"
        android:layout_marginTop="70dp"
        android:layout_centerInParent="true"
        android:id="@+id/gotoLogIn">
    </TextView>

</RelativeLayout>